--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;600;700;800;900&family=Ovo&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v<YOUR_MAPBOX_VERSION>/mapbox-gl.css"
+      rel="stylesheet"
+    />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
